DBTOOLS-1632 added statements.pg javadocs